# tidy_tools

./: .gitattributes  .pre-commit-config.yaml  404.html  README.md  housing_market_context.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml  pytest.yml
api/api-reference/: index.html
api/core/: index.html
api/core/filter/: index.html
api/core/selector/: index.html
api/dataframe/context/: index.html
api/dataframe/dataframe/: index.html
api/dataframe/handler/: index.html
api/functions/merge/: index.html
api/functions/reader/: index.html
api/model/convert/: index.html
api/model/model/: index.html
api/model/validate/: index.html
api/workflow/compose/: index.html
api/workflow/pipeline/: index.html
development/contribution/: index.html
development/roadmap/: index.html
docs/api/dataframe/: context.md  dataframe.md  handler.md
docs/api/functions/: merge.md  reader.md
docs/api/model/: model.md  transform.md
docs/api/workflow/: compose.md  pipeline.md
docs/user-guide/modules/: models.md  modules.md
search/: search_index.json
src/tidy_tools/: __init__.py  parser.py  sample.py  validator.py
src/tidy_tools/core/: __init__.py  _predicate.py  _types.py  filter.py  filters.py  joins.py  reader.py  selector.py  set_ops.py
src/tidy_tools/dataframe/: README.md  (+2 more)
tests/: conftest.py  test_filters.py  test_pipeline.py  test_selector.py
tests/core/: test_filters.py
tests/model/: test_model.py
user-guide/getting-started/: index.html
user-guide/installation/: index.html
(+28 files in other folders)
